# shoshin

./: .env.development  .env.testing  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  compose.yaml  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/workflows/: linting.yaml  testing.yaml
src/shoshin/: __about__.py  __init__.py  exceptions.py
src/shoshin/ai/: __init__.py  prompts.py
src/shoshin/cli/: commands.py  transcribe.py  utils.py
src/shoshin/conf/: __init__.py  constants.py  settings.py
src/shoshin/datastore/: documents.py
src/shoshin/pipeline/: embeddings.py  processors.py
tests/: conftest.py  test_ai_prompts.py  test_datastore.py  test_embeddings.py  test_exceptions.py  test_processors.py  test_settings.py
tests/fixtures/: embeddings_vectors.json
